add new menu and new information...

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     </head>
     <body>
         <nav class="w3-bar w3-block w3-padding">
-            <a href="index.html" class="w3-bar-item w3-button w3-border-right">HOME</a>
+            <a href="index.html" class="w3-bar-item w3-button w3-border-right w3-text-red">HOME</a>
             <a href="work.html" class="w3-bar-item w3-button w3-border-right">WORK</a>
+            <a href="skills.html" class="w3-bar-item w3-button w3-border-right">SKILLS</a>
             <a href="edu.html" class="w3-bar-item w3-button w3-border-right">EDU</a>
         </nav>
 
         <!-- Header Section -->
+        <div class="downloadbtn w3-center">
+            <a class="w3-button w3-round-xlarge w3-red" href="#"><i style="font-size:20px" class="fa">&#xf019;</i> Download PDF</a>
+        </div>
         <header class="Header w3-row-padding w3-auto">
 
             <div class="IntroText w3-half w3-justify">
@@ -35,7 +39,6 @@
                     <img src="images/Kliment.png" class="w3-image w3-card-4" alt="Picture"/>
                 </div>
             </div>
-
         </header>
         
         <!-- Contact Section -->
