--- a/work.html
+++ b/work.html
@@ -17,13 +17,14 @@
 
     <nav class="w3-bar w3-block w3-padding">
         <a href="index.html" class="w3-bar-item w3-button w3-border-right">HOME</a>
-        <a href="work.html" class="w3-bar-item w3-button w3-border-right">WORK</a>
+        <a href="work.html" class="w3-bar-item w3-button w3-border-right w3-text-red">WORK</a>
+        <a href="skills.html" class="w3-bar-item w3-button w3-border-right">SKILLS</a>
         <a href="edu.html" class="w3-bar-item w3-button w3-border-right">EDU</a>
     </nav>
 
     <!-- EXPERIENCE Section -->
     <section class="Exp w3-auto w3-row">
-        <div class="headExp w3-center">EXPERIENCE</div>
+        <div class="headExp w3-center"><i style="font-size:48px" class="fa">&#xf02d;</i> EXPERIENCE</div>
 
         <div class="w3-row-padding">
 
