change the structure of context, add more details

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <a href="edu.html" class="w3-bar-item w3-button w3-border-right">EDU</a>
         </nav>
 
-        <!-- Header Section -->
-        <div class="downloadbtn w3-center">
+        
+        <!-- div class="downloadbtn w3-center">
             <a class="w3-button w3-round-xlarge w3-red" href="#"><i style="font-size:20px" class="fa">&#xf019;</i> Download PDF</a>
-        </div>
+        <-->
+		<!-- Header Section -->
         <header class="Header w3-row-padding w3-auto">
 
             <div class="IntroText w3-half w3-justify">
