--- a/skills.html
+++ b/skills.html
@@ -17,6 +17,19 @@
             <a href="edu.html" class="w3-bar-item w3-button w3-border-right">EDU</a>
         </nav>
         <div class="headExp w3-center"><i style="font-size:48px" class="fa">&#xf200;</i> SKILLS</div>
+
+        <!-- Personal Skills Section -->
+        <section class="Personal w3-row w3-auto w3-clear w3-padding">
+            <h1 class="w3-center w3-bottombar w3-text-gray">PERSONAL</h1>
+            <br>
+            <div class="PersonalText w3-row-padding">
+                <div class="w3-quarter">Ability to work as part of a team</div>
+                <div class="w3-quarter w3-light-gray">Willingness to explore new technologies</div>
+                <div class="w3-quarter w3-gray">Responsibility and focusing on results</div>
+                <div class="w3-quarter w3-dark-gray">Quarterly reports and portfolio control</div>
+            </div>
+        </section>  
+
         <!-- Skills Section -->
         <section class="Skills w3-auto">
 
@@ -54,20 +67,7 @@
 
         </section>
         
-        <!-- Personal Skills Section -->
-        <section class="Personal w3-row w3-auto w3-clear w3-padding">
-            <h1 class="w3-center w3-bottombar w3-text-gray">PERSONAL SKILLS</h1>
-            <br>
-            <div class="w3-row-padding w3-center">
-                <ul class="PersonalText w3-ul">
-                    <li>Ability to work as part of a team</li>
-                    <li>Willingness to explore new technologies</li>
-                    <li>Responsibility and focusing on results</li>
-                    <li>Quarterly reports and portfolio control</li>
-                    <li>Fundamental knowledge of OOP programming</li>
-                </ul>
-            </div>
-        </section>  
+
 
     </body>
 </html>
