--- a/work.html
+++ b/work.html
@@ -129,7 +129,7 @@
 
             "Website": "https://hirewebsolutions.com/",
 
-            "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted, duplicate, or incomplete data in all apps:",
+            "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted, duplicate, or incomplete data in all apps",
 
             "Desc1": "Assist with the creation, deployment and maintenance of databases",
 
