finish banking sector

--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
                 <h3 class="w3-indigo w3-center"><b><i style="font-size:23px" class="fa">&#xf19c;</i> {{Company}}</b></h3>
                 <div class="headSec">
                     <h4><b>{{Position}}</b></h4>
-                    <h6><i style="font-size:20px" class="fa">&#xf073;</i> {{Date}} <b>Ongoing</b></h6>
+                    <h6><i style="font-size:20px" class="fa">&#xf073;</i> {{Date}}</h6>
                     <h6 class="w3-opacity"><a href="http://ccbank.bg">{{Website}}</a></h6>
                 </div>
 
@@ -88,7 +88,7 @@
 
             "Company": "Central Cooperative Bank",
 
-            "Date": "05.10.2018 -",
+            "Date": "05.10.2018 - 15.04.2021",
 
             "Website": "http://ccbank.bg",
 
