--- a/skills.html
+++ b/skills.html
@@ -33,7 +33,7 @@
         <!-- Skills Section -->
         <section class="Skills w3-auto">
 
-            <div class="w3-padding">
+            <div class="w3-padding w3-mobile">
                 <table class="tableTech w3-table-all w3-centered">
                     <tr>
                         <th colspan="6">
