change some words

--- a/work.html
+++ b/work.html
@@ -131,7 +131,7 @@
 
             "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted, duplicate, or incomplete data in all apps",
 
-            "Desc1": "Assist with the creation, deployment and maintenance of databases",
+            "Desc1": "Assist with the deployment",
 
             "Desc2": "Maintaining database services to the required operational levels",
 
