Change working background

--- a/work.html
+++ b/work.html
@@ -123,19 +123,17 @@
 
             "Position": "Data admin",
 
-            "Company": "Hire Web Solutions",
+            "Company": "KONE EOOD",
 
             "Date": "10.20.2020 -",
 
-            "Website": "https://hirewebsolutions.com/",
+            "Website": "https://kone.bg/",
 
-            "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted, duplicate, or incomplete data in all apps",
+            "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted or incomplete data",
 
-            "Desc1": "Assist with the deployment",
+            "Desc1": "Maintaining database services to the required operational levels",
 
-            "Desc2": "Maintaining database services to the required operational levels",
-
-            "Desc3": "Perform regular activities by following internal processes",
+            "Desc2": "Perform regular activities by following internal processes",
 
             };
 
