--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
             <div class="IntroText w3-half w3-justify">
                 <div class="w3-padding">
                     <div class="Summary w3-border-bottom">Summary:</div>
-                    <p>Credit analyst with <strong>6+ years</strong> of professional experience,
+					<p><strong>Proficient in adapting to new procedures</strong> as business climate changes.</p>
+					<p>Optimizing operations and <strong>analyzing</strong> the company’s products.</p>
+					<p><strong>Implementation</strong> of new software and support.</p>
+					<p>Concerns about <strong>digitization</strong> also focus on predictive and preventive maintenance, 
+					<strong>analyzing big data sets</strong>, and gaining data insights when needed.</p>
+                    <p><strong>6+ years</strong> of professional experience as a credit analyst,
                         which includes mortgage and consumer <strong>loans consulting and monitoring.</strong></p>
-                    <p>Review user data and determine whether or not <strong>credit applications</strong> should be approved.</p>
-                    <p>Proven background in the assessment of the <strong>creditworthiness of clients.</strong> In addition, I analyze documents and statements to identify <strong>risk factors</strong>.</p>
-                    <p>Optimizing operations and <strong>analyzing</strong> the company’s products.</p>
-                    <p><strong>Proficient in adapting to new procedures</strong> as business climate changes.</p>
+                    
+                    
                 </div>
             </div>
             <div class="PicLogo w3-half">
