--- a/work.html
+++ b/work.html
@@ -28,18 +28,17 @@
 
         <div class="w3-row-padding">
 
-            <div class="HireWeb w3-border w3-border-black w3-padding w3-center" id="Three">
-                <h3 class="w3-black"><b><i style="font-size:23px" class="fa">&#xf0eb;</i> {{Company}}</b></h3>
+            <div class="KONE w3-border w3-border-black w3-padding w3-center" id="Three">
+                <h3 class="w3-black"><b><i style="font-size:23px" class="fa">&#xf080;</i> {{Company}}</b></h3>
                 <div class="headSec">
                     <h4><b>{{Position}}</b><h4>
                     <h6><i style="font-size:20px" class="fa">&#xf073;</i> {{Date}} <b>Ongoing</b></h6>
-                    <h6 class="w3-opacity"><a href="https://hirewebsolutions.com/">{{Website}}</a></h6>
+                    <h6 class="w3-opacity"><a href="https://kone.bg/">{{Website}}</a></h6>
                 </div>
                 <ul class="w3-ul">
                     <li>{{Text}}</li>
                     <li>{{Desc1}}</li>
                     <li>{{Desc2}}</li>
-                    <li>{{Desc3}}</li>
                 </ul>
             </div>
 
@@ -88,7 +87,7 @@
 
             "Company": "Central Cooperative Bank",
 
-            "Date": "05.10.2018 - 15.04.2021",
+            "Date": "05.10.2018 - 14.04.2021",
 
             "Website": "http://ccbank.bg",
 
@@ -125,9 +124,9 @@
 
             "Company": "KONE EOOD",
 
-            "Date": "10.20.2020 -",
+            "Date": "15.04.2021 -",
 
-            "Website": "https://kone.bg/",
+            "Website": "https://kone.bg",
 
             "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted or incomplete data",
 
