--- a/work.html
+++ b/work.html
@@ -112,7 +112,7 @@
 
             "Desc1": "Consulting for credits",
 
-            "Desc2": "Maintain good cutomer relationships",
+            "Desc2": "Maintain good customer relationships",
 
             "Desc3": "Individual offers for mortgage and customer loans",
             "Desc4": "Implementation of an investment and insurance plan"
