--- a/work.html
+++ b/work.html
@@ -36,7 +36,6 @@
                     <h6 class="w3-opacity"><a href="https://kone.bg/">{{Website}}</a></h6>
                 </div>
                 <ul class="w3-ul">
-                    <li>{{Text}}</li>
                     <li>{{Desc1}}</li>
                     <li>{{Desc2}}</li>
                 </ul>
@@ -53,8 +52,6 @@
                 <ul class="w3-ul">
                     <li>{{Desc1}}</li>
                     <li>{{Desc2}}</li>
-                    <li>{{Desc3}}</li>
-                    <li>{{Desc4}}</li>
                 </ul>
 
 
@@ -71,8 +68,6 @@
                     <ul class="w3-ul">
                         <li>{{Desc1}}</li>
                         <li>{{Desc2}}</li>
-                        <li>{{Desc3}}</li>
-                        <li>{{Desc4}}</li>
                     </ul>
             </div>
         </div>
@@ -91,13 +86,9 @@
 
             "Website": "http://ccbank.bg",
 
-            "Desc1": "Monitoring credit portfolio",
+            "Desc1": "Monitoring credit portfolio, analyze structuring of credit deals and records.",
 
-            "Desc2": "Analysis of the client`s creditworthiness",
-
-            "Desc3": "Structuring of credit deals and records",
-
-            "Desc4": "Gave a credit opinion for a deal"
+            "Desc2": "Gave a credit opinion for a deal.",
 
         };
         var myObject02 = {
@@ -110,12 +101,9 @@
 
             "Website": "http://ubb.bg",
 
-            "Desc1": "Consulting for credits",
+            "Desc1": "Consulting and individual offer for mortgage and customer loans.",
 
-            "Desc2": "Maintain good customer relationships",
-
-            "Desc3": "Individual offers for mortgage and customer loans",
-            "Desc4": "Implementation of an investment and insurance plan"
+            "Desc2": "Implementation of an investment and insurance plan",
 
         };
         var myObject03 = {
@@ -128,11 +116,9 @@
 
             "Website": "https://kone.bg",
 
-            "Text": "Fixing or removing incorrect, corrupted, incorrectly formatted or incomplete data",
+            "Desc1": "Fixing or removing incorrect, corrupted, incorrectly formatted or incomplete data",
 
-            "Desc1": "Maintaining database services to the required operational levels",
-
-            "Desc2": "Perform regular activities by following internal processes",
+            "Desc2": "Maintaining database services to the required operational levels"
 
             };
 
